--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Girl Meets Code
 description: Learning the languages of our future robot overlords. Beep boop.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: http://i0.kym-cdn.com/photos/images/original/000/569/146/2c9.gif
+avatar: https://imgur.com/a/Me90I
 
 #
 # Flags below are optional
