--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Girl Meets Code
 description: Learning the languages of our future robot overlords. Beep boop.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://imgur.com/IJ8Q6dd
+avatar: https://i.imgur.com/IJ8Q6dd.gif
 
 #
 # Flags below are optional
