--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: Girl Meets Code
+name: Code Meets Girl
 
 # Short bio or description (displayed in the header)
 description: Learning the languages of our future robot overlords. Beep boop.
