--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Code Meets Girl
 description: Learning the languages of our future robot overlords. Beep boop.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://i.imgur.com/IJ8Q6dd.gif
+avatar: http://hliutongco.github.io/images/bmo.gif
 
 #
 # Flags below are optional
