--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,9 @@ description: Learning the languages of our future robot overlords. Beep boop.
 avatar: http://hliutongco.github.io/images/bmo.gif
 
 # Post excerpt customization
-excerpt_separator: "\n\n\n"
+excerpt_size: 55
+
+# excerpt_separator: "\n\n\n"
 
 #
 # Flags below are optional
